gcc/testsuite/gdc.test/compilable/imports/test19609b.d
deprecated(['h','e','l','l','o']) module imports.test19609b;
