gcc/testsuite/gdc.test/fail_compilation/imports/fail19609b.d
deprecated([1]) module imports.fail19609b;
